@@ -7,6 +7,7 @@ import { apiFetch, dispatch } from '@wordpress/data-controls';
 import { addQueryArgs } from '@wordpress/url';
 import { __ } from '@wordpress/i18n';
 import { formatDateValue } from 'utils';
+import { snakeCase } from 'lodash';
 
 /**
  * Internal dependencies
@@ -60,6 +61,8 @@ export function* getDisputes( query ) {
 	const path = addQueryArgs( `${ NAMESPACE }/disputes`, {
 		page: query.paged,
 		pagesize: query.perPage,
+		sort: snakeCase( query.orderBy ),
+		direction: query.order,
 		...formatQueryFilters( query ),
 	} );
 
